--- a/app/views/studies/sync_action_fail.js.erb
+++ b/app/views/studies/sync_action_fail.js.erb
@@ -1,5 +1,11 @@
+// populate window.SCP.currentStudyFiles with information about all known StudyFiles
+// calling study.reload avoids caching issues in case files have recently updated
+window.SCP.currentStudyFiles = <%= @study.reload.study_files.available.map(&:attributes).to_json.html_safe %>
+
 <% if !@study_file.nil? %>
   $('<%= @form %>').replaceWith("<%= escape_javascript(render partial: @partial, locals: {study_file: @study_file}) %>");
 <% else %>
   $('<%= @form %>').replaceWith("<%= escape_javascript(render partial: 'directory_listing_form', locals: {directory: @directory}) %>");
 <% end %>
+
+$(window).trigger('updateRawCountsSelect')
