--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -4,7 +4,7 @@
       <%= f.label :is_raw_counts, 'Is this a raw counts matrix?' %><br />
       <%= f.radio_button :is_raw_counts, 1,
                          checked: f.object.is_raw_counts, class: 'raw-counts-radio is_raw_counts_true',
-                         disabled: disable_raw_counts %>
+                         disabled: disable_raw_counts%>
       <%= f.label :is_raw_counts, 'Yes', class: 'radio-pad' %>
       <%= f.radio_button :is_raw_counts, 0,
                          checked: !f.object.is_raw_counts, class: 'raw-counts-radio is_raw_counts_false',
@@ -12,20 +12,18 @@
       <%= f.label :is_raw_counts, 'No', class: 'radio-pad'  %>
     </div>
     <div class="col-lg-2 units-or-raw-associations">
-      <div class="raw_associations_select"></div>
-      <% if f.object.is_raw_counts %>
+      <div class="raw_associations_select <%= f.object.is_raw_counts ? 'hidden' : nil %>"></div>
+      <div class="<%= !f.object.is_raw_counts ? 'hidden' : nil %> raw-counts-units-select">
         <%= f.label :units %><br />
         <%= f.select :units, options_for_select(ExpressionFileInfo::UNITS_VALUES, f.object.units),
                      {include_blank: true},
                      class: 'form-control raw-counts-select counts-unit-dropdown', disabled: !f.object.is_raw_counts %>
-      <% else %>
-
-        <%= f.hidden_field :raw_counts_associations,
-                           {
-                             class: "#{f.object.is_raw_counts ? 'hidden' : nil} raw_counts_associations", multiple: true
-                           }
-        %>
-      <% end %>
+      </div>
+      <%= f.hidden_field :raw_counts_associations,
+                         {
+                           class: "raw_counts_associations", multiple: true
+                         }
+      %>
     </div>
     <div class="col-lg-2">
       <%= f.label :biosample_input_type, label_with_asterisk('Biosample Input Type') %><br />
@@ -43,11 +41,6 @@
       <%= f.label :modality, label_with_asterisk('Modality') %><br />
       <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
                    {}, class: 'form-control' %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-
     </div>
   </div>
 </div>
