--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for(study_file, url: update_study_file_study_path(@study._id),
+<%= nested_form_for(study_file, url: update_study_file_study_path(@study._id, allow_only: allow_only || 'all'),
                     html: {multipart: true, id: "expression_form_#{study_file._id}",
                            class: "initialize_expression_form #{study_file.new_record? ? 'new-expression-form' : nil}",
                            data: {remote: true}}) do |f| %>
@@ -97,6 +97,7 @@
         }
       });
 
+    // render the raw counts association select; if replace is true, allows swapping out units dropdown in raw counts form
     function updateRawCountsAssnSelect() {
       const rawAssnTarget = $(`${expFormId_<%= allow_only %>} .raw_associations_select`)[0]
       const pairedHiddenField = $(`${expFormId_<%= allow_only %>} .raw_counts_associations`)[0]
@@ -107,13 +108,15 @@
       window.SCP.renderRawAssociationSelect(rawAssnTarget, currentValues, pairedHiddenField, opts)
     }
 
-    <% if User.feature_flag_for_instance(current_user, 'raw_counts_required_backend')  %>
-      updateRawCountsAssnSelect()
+    updateRawCountsAssnSelect()
 
-      $(window).on('updateRawCountsSelect', function() {
-        updateRawCountsAssnSelect()
-      })
-    <% end %>
+    $(window).on('updateRawCountsSelect', function() {
+      updateRawCountsAssnSelect()
+    })
+
+    $('form').on('change', '.is_raw_counts_true, .is_raw_counts_false', function() {
+      updateRawCountsAssnSelect()
+    })
 
 		$(function() {
       $(expFormId_<%= allow_only %>).fileupload({
@@ -155,8 +158,7 @@
             }
 				},
 				done: function(e, data) {
-          let partial = '<%= allow_only == 'raw' ? 'initialize_raw_expression_form' : 'initialize_processed_expression_form' %>';
-				  let stepName = `${partial}_nav`
+				  let stepName = "initialize_<%= allow_only %>_expression_form_nav"
           completeWizardStep(stepName);
 					var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
 					$.ajax({
@@ -172,7 +174,7 @@
                       data: {
                           file: fileName,
                           modal_target: '#expression-parse-modal',
-                          partial: partial,
+                          partial: 'initialize_expression_form',
                           selector: expFormId_<%= allow_only %>,
                           allow_only: '<%= allow_only %>'
                       },
