--- a/app/views/studies/update_study_file_from_sync.js.erb
+++ b/app/views/studies/update_study_file_from_sync.js.erb
@@ -1,3 +1,7 @@
+// populate window.SCP.currentStudyFiles with information about all known StudyFiles
+// calling study.reload avoids caching issues in case files have recently updated
+window.SCP.currentStudyFiles = <%= @study.reload.study_files.available.map(&:attributes).to_json.html_safe %>
+
 $('#sync-notices').html("<%= escape_javascript(render partial: 'sync_notice_modal', locals: {message: @message}) %>");
 $('#sync-notice-modal').modal('show');
 
@@ -6,3 +10,5 @@ $("<%= @form %>").replaceWith("<%= escape_javascript(render partial: 'synced_stu
 
 $("#initialized").replaceWith("<%= escape_javascript(render partial: 'initialize_study_label') %>");
 $('.initialize-label').tooltip({container: 'body'});
+
+$(window).trigger('updateRawCountsSelect')
