--- a/app/views/studies/sync_action_success.js.erb
+++ b/app/views/studies/sync_action_success.js.erb
@@ -1,6 +1,6 @@
 // populate window.SCP.currentStudyFiles with information about all known StudyFiles
 // calling study.reload avoids caching issues in case files have recently updated
-window.SCP.currentStudyFiles = <%= @study.reload.study_files.available.map(&:attributes).to_json.html_safe %>
+window.SCP.currentStudyFiles = <%= @study.study_files.persisted.map(&:attributes).to_json.html_safe %>
 
 closeModalSpinner('#delete-modal-spinner', '#delete-modal', function() {
   $('#sync-notices').html("<%= escape_javascript(render partial: 'sync_notice_modal', locals: {message: @message}) %>");
