--- a/app/views/studies/sync_study.html.erb
+++ b/app/views/studies/sync_study.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
-  window.SCP.currentStudyFiles = <%= @study.study_files.available.map(&:attributes).to_json.html_safe %>
+  window.SCP.currentStudyFiles = <%= @study.study_files.persisted.map(&:attributes).to_json.html_safe %>
 </script>
 <div class="row">
   <div class="col-sm-10">
