addressing comments from demo

--- a/app/views/studies/_block_processed_upload_content.html.erb
+++ b/app/views/studies/_block_processed_upload_content.html.erb
@@ -4,12 +4,18 @@
       <div class="col-md-12 text-center">
         <div class="row">
           <div class="col-md-12 bottom-pad">
-            <h3>Raw count file upload required for access to processed matrix upload</h3>
+            <h3>
+              Uploading a raw count matrix is now required in order to access to processed matrix uploads.
+            </h3>
+            <p class="lead">
+              If you are unable or do not wish to upload a raw count matrix, you can request an exemption using the
+              link below.
+            </p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-offset-4 col-md-2">
-            <p><%= link_to "<i class='fas fa-chevron-circle-left'></i> Upload Raw File".html_safe, '#',
+            <p><%= link_to "<i class='fas fa-chevron-circle-left'></i> Upload Raw Count File".html_safe, '#',
                            class: 'btn btn-default btn-lg', id: 'upload-raw-counts' %></p>
           </div>
           <div class="col-md-2">
