--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="expression-file-info-fields">
   <div class="row">
     <div class="col-lg-2">
-      <%= f.label :is_raw_counts, 'Is this a raw counts matrix?' %><br />
+      <%= f.label :is_raw_counts, 'Is this a raw count matrix?' %><br />
       <%= f.radio_button :is_raw_counts, 1,
                          checked: f.object.is_raw_counts, class: 'raw-counts-radio is_raw_counts_true',
                          disabled: disable_raw_counts%>
