--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -165,7 +165,6 @@
           const numErrors = validationErrors.length
 
           if (numErrors === 0) {
-            var fileName = file.name.replace(FILENAME_SANITIZER, '_');
             $('#metadata_form .filename').val(fileName);
             $.getJSON("<%= resume_upload_study_path %>", { file: fileName }, function (result) {
             	var file = result.file;
@@ -180,7 +179,7 @@
           } else {
             const target = document.querySelector(`#${containerId}`)
             window.SCP.renderValidationAlert(
-              target, validationErrors, fileType
+              target, validationErrors, file, fileType
             )
           }
 				},
