--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -155,16 +155,20 @@
           const containerId = `${fileType}-metadata-container`
 
           let validationErrors = []
+          let summary = ''
           <% if User.feature_flag_for_instance(current_user, 'clientside_validation') %>
             $('#metadata-errors').remove() // Remove any prior notice
             $('#metadata_form').append(`<div id="${containerId}"></div>`)
             // Run client-side metadata file validation
-            validationErrors = await window.SCP.validateFile(file, fileType)
+            const results = await window.SCP.validateFile(file, fileType)
+            validationErrors = results.errors
+            summary = results.summary
           <% end %>
 
           const numErrors = validationErrors.length
 
           if (numErrors === 0) {
+            var fileName = file.name.replace(FILENAME_SANITIZER, '_');
             $('#metadata_form .filename').val(fileName);
             $.getJSON("<%= resume_upload_study_path %>", { file: fileName }, function (result) {
             	var file = result.file;
@@ -179,7 +183,7 @@
           } else {
             const target = document.querySelector(`#${containerId}`)
             window.SCP.renderValidationAlert(
-              target, validationErrors, file, fileType
+              target, summary, validationErrors, fileType,
             )
           }
 				},
