--- a/app/views/studies/update_study_file_from_sync.js.erb
+++ b/app/views/studies/update_study_file_from_sync.js.erb
@@ -11,4 +11,7 @@ $("<%= @form %>").replaceWith("<%= escape_javascript(render partial: 'synced_stu
 $("#initialized").replaceWith("<%= escape_javascript(render partial: 'initialize_study_label') %>");
 $('.initialize-label').tooltip({container: 'body'});
 
-$(window).trigger('updateRawCountsSelect')
+$('.expression-file-info-fields').each(function(index, element) {
+  let formId = $(element).closest('form').attr('id')
+  $(`#${formId}`).trigger('updateRawCountsSelect')
+})
