--- a/app/views/studies/sync_study_file.js.erb
+++ b/app/views/studies/sync_study_file.js.erb
@@ -23,4 +23,7 @@ $('.unsynced').each(function() {
 $("#initialized").replaceWith("<%= escape_javascript(render partial: 'initialize_study_label') %>");
 $('.initialize-label').tooltip({container: 'body'});
 
-$(window).trigger('updateRawCountsSelect')
+$('.expression-file-info-fields').each(function(index, element) {
+  let formId = $(element).closest('form').attr('id')
+  $(`#${formId}`).trigger('updateRawCountsSelect')
+})
