--- a/app/views/studies/update_study_file.js.erb
+++ b/app/views/studies/update_study_file.js.erb
@@ -10,4 +10,10 @@ var wizForm = $('.<%= params[:partial] %>').slice(-1)[0];
 
 $(wizForm).find('[data-toggle="tooltip"]').tooltip({container: 'body'});
 
-$(window).trigger('updateRawCountsSelect')
+// emit event to trigger updates to all raw counts select inputs if this file was a raw counts matrix
+if (<%= @study_file.is_raw_counts_file? %>) {
+  $('.expression-file-info-fields').each(function(index, element) {
+    let formId = $(element).closest('form').attr('id')
+    $(`#${formId}`).trigger('updateRawCountsSelect')
+  })
+}
