--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -34,6 +34,9 @@
   float: left;
   margin-top: 66px;
   margin-left: 35px;
+  img {
+  	max-height: 100px;
+  }
 }
 
 #scp-logo {
@@ -200,4 +203,16 @@
 .hide-processed-disclaimer {
   display: none;
   z-index: -1000;
+
+
+.branding-group-list {
+	.branding-group-logo {
+		width: 180px;
+		img {
+			max-width: 180px;
+		}
+	}
+	.branding-group-name {
+		text-align: left;
+	}
 }
