addressing PR comments

--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -145,9 +145,9 @@
           </div>
         <% end %>
         <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
-          // user clicks the 'Upload Raw Counts' button after seeing disclaimer
+          // user clicks the 'Upload Raw Count' button after seeing disclaimer
           $('#upload-raw-counts').on('click', function() {
-            console.log('Returning to raw counts tab')
+            console.log('Returning to raw count tab')
             $('#initialize_raw_expression_form a').click();
           })
 
