--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -14,7 +14,7 @@
     <div class="col-lg-2 units-or-raw-associations">
       <div class="raw_associations_select <%= f.object.is_raw_counts ? 'hidden' : nil %>"></div>
       <div class="<%= !f.object.is_raw_counts ? 'hidden' : nil %> raw-counts-units-select">
-        <%= f.label :units %><br />
+        <%= f.label :units, label_with_asterisk('Units') %><br />
         <%= f.select :units, options_for_select(ExpressionFileInfo::UNITS_VALUES, f.object.units),
                      {include_blank: true},
                      class: 'form-control raw-counts-select counts-unit-dropdown', disabled: !f.object.is_raw_counts %>
