--- a/app/views/studies/parse.js.erb
+++ b/app/views/studies/parse.js.erb
@@ -17,7 +17,7 @@ $('<%= params[:modal_target]%>').modal('hide');
 	$('#' + step + '_nav_completed').html("<span class='fas fa-check text-success'></span>");
 <% end %>
 
-// emit event to trigger updates to all raw counts select inputs if this file was a raw counts matrix
+// emit event to trigger updates to all raw count select inputs if this file was a raw counts matrix
 if (<%= @study_file.is_raw_counts_file? %>) {
   $('.expression-file-info-fields').each(function(index, element) {
     let formId = $(element).closest('form').attr('id')
