--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -16,19 +16,21 @@
   </div>
   <div class="col-lg-2">
     <%= f.label :biosample_input_type, label_with_asterisk('Biosample Input Type') %><br />
-    <%= f.select :biosample_input_type, options_for_select(ExpressionFileInfo::BIOSAMPLE_INPUT_TYPE_VALUES, f.object.biosample_input_type),
-                 {}, class: 'form-control' %>
+
+    # <% if study_file.present? %>
+    <%= f.select :biosample_input_type, options_for_select(ExpressionFileInfo::BIOSAMPLE_INPUT_TYPE_VALUES, f.object.biosample_input_type.present? ? f.object.biosample_input_type : nil),
+    {include_blank: 'Select One...'}, class: 'form-control' %>
 
   </div>
   <div class="col-lg-2">
     <%= f.label :library_preparation_protocol, label_with_asterisk('Library Preparation Protocol') %><br />
     <%= f.select :library_preparation_protocol,
-                 options_for_select(ExpressionFileInfo::LIBRARY_PREPARATION_VALUES, f.object.library_preparation_protocol),
-                 {}, class: 'form-control' %>
+                 options_for_select(ExpressionFileInfo::LIBRARY_PREPARATION_VALUES, f.object.library_preparation_protocol.present? ? f.object.library_preparation_protocol: nil),
+                 {include_blank: 'Select One...'}, class: 'form-control' %>
   </div>
   <div class="col-lg-4">
     <%= f.label :modality, label_with_asterisk('Modality') %><br />
-    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
-                 {}, class: 'form-control' %>
+    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality.present? ? f.object.modality : nil),
+    {include_blank: 'Select One...'}, class: 'form-control' %>
   </div>
 </div>
